log
Sun Mar 22 07:38:25 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
13d3df6
Sun Mar 22 07:41:09 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
b783957
Sun Mar 22 08:17:16 PM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:7: error: dereferencing ‘void *’ pointer [-Werror]
   48 |       *dato = i;
      |       ^~~~~
exercises.c:48:13: error: invalid use of void expression
   48 |       *dato = i;
      |             ^
cc1: all warnings being treated as errors
196745c
Sun Mar 22 08:19:23 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: ‘dato’ undeclared (first use in this function)
   51 |    free(dato);
      |         ^~~~
exercises.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
a58e6ae
Sun Mar 22 08:21:06 PM UTC 2026: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
f5ad628
Sun Mar 22 08:21:57 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
4547f0e
Sun Mar 22 08:29:22 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:4: error: expected ‘,’ or ‘;’ before ‘while’
   62 |    while (elemento != NULL){
      |    ^~~~~
exercises.c:61:10: error: unused variable ‘elemento’ [-Werror=unused-variable]
   61 |    void* elemento = first(L)
      |          ^~~~~~~~
cc1: all warnings being treated as errors
522da3e
Sun Mar 22 08:44:27 PM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:13: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   63 |       total += elemento;
      |             ^~
9e49ba1
Sun Mar 22 08:44:40 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 30/70
7559f90
